--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin="" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@250&family=Poppins:wght@200&family=Teko&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Project Spotlight</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
